objects/csp_offensive_strategy__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Created_On__c</fullName>
        <label>Activity Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csp__c</fullName>
        <label>csp</label>
        <referenceTo>Competitive_Sales_Plan__c</referenceTo>
        <relationshipLabel>CSP Offensive Strategies</relationshipLabel>
        <relationshipName>CSP_Offensive_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>strength_customer_validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>strength_customer_validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>strength_leveraged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>strength_leveraged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>strength_text__c</fullName>
        <label>strength_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tactic_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>tactic_owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CSP Offensive Strategies</relationshipLabel>
        <relationshipName>CSP_Offensive_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tactic_text__c</fullName>
        <label>tactic_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tactic_timing__c</fullName>
        <label>tactic_timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>their_weakness_customer_validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>their_weakness_customer_validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>their_weakness_exploited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>their_weakness_exploited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>their_weakness_text__c</fullName>
        <label>their_weakness_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSP Offensive Strategy</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CSP Offensive Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSP Offensive Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>